--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>bs4_kakunin</title>
+	<style>
+#mybody{
+	position:fixed !important;
+	top:0 !important;
+	bottom:0 !important;
+	left:0 !important;
+	right:0 !important;
+	padding:0 !important;
+	margin:0 !important;
+	height:100vh !important;
+	min-height:100vh !important;
+	max-height:100vh !important;
+	width:100vw !important;
+	min-width:100vw !important;
+	max-width:100vw !important;
+}
+	</style>
   </head>
-  <body>
+  <body id="mybody">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
